objects/A_Customer_Profile__c.object
<CustomObject>
    <description>Customer profile for &quot;A&quot; customers.</description>
    <fields>
        <fullName>Account_Definition__c</fullName>
        <inlineHelpText>Please specify if this A Customer is based on accounts included in a GAM Code, a Worldwide Account Nbr or some other custom grouping of accounts. Note that if the Custom option is selected, no automatic gathering of actuals in the future will be possible.</inlineHelpText>
        <label>Account Definition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GAM Code</fullName>
                </value>
                <value>
                    <fullName>Worldwide Account Number</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Objective_1__c</fullName>
        <inlineHelpText>What are the goals for this account?</inlineHelpText>
        <label>Account Objective 1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Objective_2__c</fullName>
        <label>Account Objective 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Objective_3__c</fullName>
        <label>Account Objective 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account Plan Object.</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>&quot;A&quot; Customer Profiles</relationshipLabel>
        <relationshipName>A_Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Unlocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Customer_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Customer Plan</label>
        <referenceTo>BU_Customer_Plan__c</referenceTo>
        <relationshipLabel>&quot;A&quot; Customer Profiles</relationshipLabel>
        <relationshipName>A_Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Editor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Content Editor of Customer Profiles for the Business Unit</description>
        <inlineHelpText>Content Editor of Customer Profiles for the Business Unit</inlineHelpText>
        <label>BU Editor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>A_Customer_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_CY_Forecast_M__c</fullName>
        <inlineHelpText>Current Year WIP BU Forecast in Millions</inlineHelpText>
        <label>BU Revenue CY Forecast M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_Fcst_Plan_Yr_1_M__c</fullName>
        <inlineHelpText>Plan Year+1 Forecasted Revenue for this BU in Millions</inlineHelpText>
        <label>BU Revenue Fcst Plan Yr+1 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_Fcst_Plan_Yr_4_M__c</fullName>
        <inlineHelpText>Plan Year+4 Forecasted Revenue for this BU in Millions</inlineHelpText>
        <label>BU Revenue Fcst Plan Yr+4 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_Fcst_Plan_Yr_M__c</fullName>
        <inlineHelpText>Plan Year Forecasted Revenue for this BU in Millions</inlineHelpText>
        <label>BU Revenue Fcst Plan Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_Pct_Change_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(BU_Revenue_Fcst_Plan_Yr_M__c), 0,
			IF(BU_Revenue_Fcst_Plan_Yr_M__c = 0 , 0,
			(BU_Revenue_Fcst_Plan_Yr_1_M__c / BU_Revenue_Fcst_Plan_Yr_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Revenue Pct Change Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_Pct_Change_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(BU_Revenue_Fcst_Plan_Yr_1_M__c), 0,
			IF(BU_Revenue_Fcst_Plan_Yr_1_M__c = 0 , 0,
			(BU_Revenue_Fcst_Plan_Yr_4_M__c / BU_Revenue_Fcst_Plan_Yr_1_M__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Revenue Pct Change Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_Pct_Change_Plan_Yr__c</fullName>
        <formula>IF (ISNULL(BU_Revenue_Prior_Yr_Actual_M__c), 0,
			IF(BU_Revenue_Prior_Yr_Actual_M__c = 0 , 0,
			(BU_Revenue_Fcst_Plan_Yr_M__c / BU_Revenue_Prior_Yr_Actual_M__c) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU_Revenue_Pct_Change_Plan_Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_Prior_Yr_Actual_M__c</fullName>
        <inlineHelpText>Prior Year Actual BU Revenue in Millions (direct and/or indirect based on the Sales Figure Makeup specified in the account plan definition section) .</inlineHelpText>
        <label>BU Revenue Prior Yr Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_Revenue_YTD_Actual_M__c</fullName>
        <inlineHelpText>YTD Actual BU Revenue in Millions</inlineHelpText>
        <label>BU Revenue YTD Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakthrough_Pgm_1_Comments__c</fullName>
        <label>Breakthrough Pgm 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Breakthrough_Pgm_1_Status__c</fullName>
        <label>Breakthrough Pgm 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive momentum</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Negative momentum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breakthrough_Pgm_2_Comments__c</fullName>
        <label>Breakthrough Pgm 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Breakthrough_Pgm_2_Status__c</fullName>
        <label>Breakthrough Pgm 2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive momentum</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Negative momentum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breakthrough_Pgm_3_Comments__c</fullName>
        <label>Breakthrough Pgm 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Breakthrough_Pgm_3_Status__c</fullName>
        <label>Breakthrough Pgm 3 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive momentum</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Negative momentum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breakthrough_Program_1__c</fullName>
        <inlineHelpText>What are the major technology innovations for this customer?</inlineHelpText>
        <label>Breakthrough Program 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakthrough_Program_2__c</fullName>
        <label>Breakthrough Program 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakthrough_Program_3__c</fullName>
        <label>Breakthrough Program 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Circuit Protection</fullName>
                </value>
                <value>
                    <fullName>Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>Data Communications</fullName>
                </value>
                <value>
                    <fullName>Distribution Channel</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Telecom Networks</fullName>
                </value>
                <value>
                    <fullName>Touch Solutions</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Demo Chip to Board</fullName>
                </value>
                <value>
                    <fullName>Demo SmarTran Networks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category1_Name__c</fullName>
        <inlineHelpText>Name of Customer Revenue major grouping. This could represent products, industry, etc…</inlineHelpText>
        <label>Category1 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category1_Rev_Pct_Chg_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(Category1_Revenue_M_Plan_Yr_2__c), 0,
			IF(Category1_Revenue_M_Plan_Yr_2__c = 0 , 0,
			(Category1_Revenue_M_Plan_Yr_1__c / Category1_Revenue_M_Plan_Yr_2__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category1 Rev Pct Chg Plan Yr-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Category1_Rev_Pct_Chg_Plan_Yr_2__c</fullName>
        <formula>IF (ISNULL(Category1_Revenue_M_Plan_Yr_3__c), 0,
			IF(Category1_Revenue_M_Plan_Yr_3__c = 0 , 0,
			(Category1_Revenue_M_Plan_Yr_2__c / Category1_Revenue_M_Plan_Yr_3__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category1 Rev Pct Chg Plan Yr-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Category1_Revenue_M_Plan_Yr_1__c</fullName>
        <label>Category1 Revenue M Plan Yr-1</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category1_Revenue_M_Plan_Yr_2__c</fullName>
        <label>Category1 Revenue M Plan Yr-2</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category1_Revenue_M_Plan_Yr_3__c</fullName>
        <label>Category1 Revenue M Plan Yr-3</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category2_Name__c</fullName>
        <label>Category2 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category2_Rev_Pct_Chg_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(Category2_Revenue_M_Plan_Yr_2__c), 0,
			IF(Category2_Revenue_M_Plan_Yr_2__c = 0 , 0,
			(Category2_Revenue_M_Plan_Yr_1__c / Category2_Revenue_M_Plan_Yr_2__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category2 Rev Pct Chg Plan Yr-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Category3_Name__c</fullName>
        <label>Category3 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_1_Comments__c</fullName>
        <label>Competitor 1 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_1_MS_Trend__c</fullName>
        <inlineHelpText>What direction is the Market Share for this competitor trending?</inlineHelpText>
        <label>Competitor 1 MS Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_1_Market_Share__c</fullName>
        <inlineHelpText>Percent of Market Share that this competitor holds. Enter a 3 digit percentage value with no decimal places.</inlineHelpText>
        <label>Competitor 1 Market Share</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_1__c</fullName>
        <inlineHelpText>Competitor Name</inlineHelpText>
        <label>Competitor 1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_2_Comments__c</fullName>
        <label>Competitor 2 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_2_MS_Trend__c</fullName>
        <label>Competitor 2 MS Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_2_Market_Share__c</fullName>
        <label>Competitor 2 Market Share</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_2__c</fullName>
        <label>Competitor 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_3_Comments__c</fullName>
        <label>Competitor 3 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_3_MS_Trend__c</fullName>
        <label>Competitor 3 MS Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_3_Market_Share__c</fullName>
        <label>Competitor 3 Market Share</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_3__c</fullName>
        <label>Competitor 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Scorecard_Comments__c</fullName>
        <label>Customer Scorecard Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Scorecard__c</fullName>
        <inlineHelpText>URL to a Scorecard Site or file</inlineHelpText>
        <label>Customer Scorecard</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <inlineHelpText>&quot;A&quot; Customer Profiles will be sent to the Executive Dashboard once approved.  All other types will not be sent to the Dashboard.</inlineHelpText>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A Customer</fullName>
                    <default>true</default>
                    <label>A Customer</label>
                </value>
                <value>
                    <fullName>B Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineering_Relationship_Comments__c</fullName>
        <label>Engineering Relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engineering_Relationship__c</fullName>
        <label>Engineering Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Relationship_Comments__c</fullName>
        <label>Executive Relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Relationship__c</fullName>
        <label>Executive Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <inlineHelpText>GAM Code in which accounts for this A Customer are
			included.</inlineHelpText>
        <label>GAM Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Pct_Plan_Yr_1__c</fullName>
        <label>Gross Margin Pct Plan Yr+1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Pct_Plan_Yr_4__c</fullName>
        <label>Gross Margin Pct Plan Yr+4</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Pct_Plan_Yr__c</fullName>
        <label>Gross Margin Pct Plan Yr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Pct_Prior_Yr__c</fullName>
        <label>Gross Margin Pct Prior Yr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hidden_Do_Not_Use__c</fullName>
        <label>Hidden_Do_Not-Use</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <inlineHelpText>Industry Segment designation should reflect the TE industry view of this customer (ie. DataCenter, Touch - retail, Touch - medical, Marine, Aerospace, etc). 
Multiple industries may be specified.</inlineHelpText>
        <label>Industry Segment</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_BU_Org_Key__c</fullName>
        <description>Format: BU_Org_Id &amp; &quot;/ &quot; &amp; BU_A_Customer_Profile_Record_ID</description>
        <label>Integration BU Org Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Integration_Last_Update_Date__c</fullName>
        <description>Date that the profile was last updated from the BU org via Cast Iron integration.</description>
        <label>Integration Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Product_1_Outlook__c</fullName>
        <label>Key Product 1 Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Product_1_Pct__c</fullName>
        <label>Key Product 1 Pct</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Key_Product_1__c</fullName>
        <label>Key Product 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Product_2_Outlook__c</fullName>
        <label>Key Product 2 Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Product_2_Pct__c</fullName>
        <label>Key Product 2 Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Key_Product_2__c</fullName>
        <label>Key Product 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Product_3_Outlook__c</fullName>
        <label>Key Product 3 Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Product_3_Pct__c</fullName>
        <label>Key Product 3 Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Key_Product_3__c</fullName>
        <label>Key Product 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Product_Percent_Title__c</fullName>
        <inlineHelpText>Specify whether you are supplying percentages for Market Share or for Revenue Mix.</inlineHelpText>
        <label>Key Product Percent Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market Share Percent</fullName>
                </value>
                <value>
                    <fullName>Revenue Mix Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Project_1_Start_Date__c</fullName>
        <inlineHelpText>Expected Start Date or Initial Order Date</inlineHelpText>
        <label>Key Project 1 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
                <value>
                    <fullName>FY16 Q1</fullName>
                </value>
                <value>
                    <fullName>FY16 Q2</fullName>
                </value>
                <value>
                    <fullName>FY16 Q3</fullName>
                </value>
                <value>
                    <fullName>FY16 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Project_1_Value_M__c</fullName>
        <description>Value of Key Project/Opportunity in Millions</description>
        <inlineHelpText>Value of Key Project/Opportunity in Millions, USD with one decimal place  (ie. $1.5M)</inlineHelpText>
        <label>Key Project 1 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Project_1__c</fullName>
        <inlineHelpText>Key Project/Opportunity description</inlineHelpText>
        <label>Key Project 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Project_2_Start_Date__c</fullName>
        <label>Key Project 2 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
                <value>
                    <fullName>FY16 Q1</fullName>
                </value>
                <value>
                    <fullName>FY16 Q2</fullName>
                </value>
                <value>
                    <fullName>FY16 Q3</fullName>
                </value>
                <value>
                    <fullName>FY16 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Project_2_Value_M__c</fullName>
        <label>Key Project 2 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Project_2__c</fullName>
        <label>Key Project 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Project_3_Start_Date__c</fullName>
        <label>Key Project 3 Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12 Q1</fullName>
                </value>
                <value>
                    <fullName>FY12 Q2</fullName>
                </value>
                <value>
                    <fullName>FY12 Q3</fullName>
                </value>
                <value>
                    <fullName>FY12 Q4</fullName>
                </value>
                <value>
                    <fullName>FY13 Q1</fullName>
                </value>
                <value>
                    <fullName>FY13 Q2</fullName>
                </value>
                <value>
                    <fullName>FY13 Q3</fullName>
                </value>
                <value>
                    <fullName>FY13 Q4</fullName>
                </value>
                <value>
                    <fullName>FY14 Q1</fullName>
                </value>
                <value>
                    <fullName>FY14 Q2</fullName>
                </value>
                <value>
                    <fullName>FY14 Q3</fullName>
                </value>
                <value>
                    <fullName>FY14 Q4</fullName>
                </value>
                <value>
                    <fullName>FY15 Q1</fullName>
                </value>
                <value>
                    <fullName>FY15 Q2</fullName>
                </value>
                <value>
                    <fullName>FY15 Q3</fullName>
                </value>
                <value>
                    <fullName>FY15 Q4</fullName>
                </value>
                <value>
                    <fullName>FY16 Q1</fullName>
                </value>
                <value>
                    <fullName>FY16 Q2</fullName>
                </value>
                <value>
                    <fullName>FY16 Q3</fullName>
                </value>
                <value>
                    <fullName>FY16 Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Project_3_Value_M__c</fullName>
        <label>Key Project 3 Value M</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
</CustomObject>